--- a/moviemall/moviemall.csproj
+++ b/moviemall/moviemall.csproj
@@ -228,6 +228,54 @@
     <Compile Include="Migrations\201801152243141_AddbirthPropInMembershipType2.Designer.cs">
       <DependentUpon>201801152243141_AddbirthPropInMembershipType2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801162308374_InitialModel1.cs" />
+    <Compile Include="Migrations\201801162308374_InitialModel1.Designer.cs">
+      <DependentUpon>201801162308374_InitialModel1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801170130288_AddMovieGenre.cs" />
+    <Compile Include="Migrations\201801170130288_AddMovieGenre.Designer.cs">
+      <DependentUpon>201801170130288_AddMovieGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801170130557_AssignValuesToMovieGenre.cs" />
+    <Compile Include="Migrations\201801170130557_AssignValuesToMovieGenre.Designer.cs">
+      <DependentUpon>201801170130557_AssignValuesToMovieGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801170142034_AddMovieGenreToDataset.cs" />
+    <Compile Include="Migrations\201801170142034_AddMovieGenreToDataset.Designer.cs">
+      <DependentUpon>201801170142034_AddMovieGenreToDataset.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801170144184_AddMovieGenreInMovie.cs" />
+    <Compile Include="Migrations\201801170144184_AddMovieGenreInMovie.Designer.cs">
+      <DependentUpon>201801170144184_AddMovieGenreInMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801170146535_AddMembersToMovie.cs" />
+    <Compile Include="Migrations\201801170146535_AddMembersToMovie.Designer.cs">
+      <DependentUpon>201801170146535_AddMembersToMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801170151080_AddMovieGenreType.cs" />
+    <Compile Include="Migrations\201801170151080_AddMovieGenreType.Designer.cs">
+      <DependentUpon>201801170151080_AddMovieGenreType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801170155491_AddMovieGenreType2.cs" />
+    <Compile Include="Migrations\201801170155491_AddMovieGenreType2.Designer.cs">
+      <DependentUpon>201801170155491_AddMovieGenreType2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801170204221_AddMovieGenreType3.cs" />
+    <Compile Include="Migrations\201801170204221_AddMovieGenreType3.Designer.cs">
+      <DependentUpon>201801170204221_AddMovieGenreType3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801170205364_AddMovieGenreType4.cs" />
+    <Compile Include="Migrations\201801170205364_AddMovieGenreType4.Designer.cs">
+      <DependentUpon>201801170205364_AddMovieGenreType4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801170215174_AddMovieGenreTypeandId.cs" />
+    <Compile Include="Migrations\201801170215174_AddMovieGenreTypeandId.Designer.cs">
+      <DependentUpon>201801170215174_AddMovieGenreTypeandId.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801170216376_AssignValuesToMovieGenre1.cs" />
+    <Compile Include="Migrations\201801170216376_AssignValuesToMovieGenre1.Designer.cs">
+      <DependentUpon>201801170216376_AssignValuesToMovieGenre1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -235,6 +283,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\MovieGenre.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -350,6 +399,42 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801152243141_AddbirthPropInMembershipType2.resx">
       <DependentUpon>201801152243141_AddbirthPropInMembershipType2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801162308374_InitialModel1.resx">
+      <DependentUpon>201801162308374_InitialModel1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801170130288_AddMovieGenre.resx">
+      <DependentUpon>201801170130288_AddMovieGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801170130557_AssignValuesToMovieGenre.resx">
+      <DependentUpon>201801170130557_AssignValuesToMovieGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801170142034_AddMovieGenreToDataset.resx">
+      <DependentUpon>201801170142034_AddMovieGenreToDataset.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801170144184_AddMovieGenreInMovie.resx">
+      <DependentUpon>201801170144184_AddMovieGenreInMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801170146535_AddMembersToMovie.resx">
+      <DependentUpon>201801170146535_AddMembersToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801170151080_AddMovieGenreType.resx">
+      <DependentUpon>201801170151080_AddMovieGenreType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801170155491_AddMovieGenreType2.resx">
+      <DependentUpon>201801170155491_AddMovieGenreType2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801170204221_AddMovieGenreType3.resx">
+      <DependentUpon>201801170204221_AddMovieGenreType3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801170205364_AddMovieGenreType4.resx">
+      <DependentUpon>201801170205364_AddMovieGenreType4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801170215174_AddMovieGenreTypeandId.resx">
+      <DependentUpon>201801170215174_AddMovieGenreTypeandId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801170216376_AssignValuesToMovieGenre1.resx">
+      <DependentUpon>201801170216376_AssignValuesToMovieGenre1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
