--- a/moviemall/moviemall.csproj
+++ b/moviemall/moviemall.csproj
@@ -276,6 +276,10 @@
     <Compile Include="Migrations\201801170216376_AssignValuesToMovieGenre1.Designer.cs">
       <DependentUpon>201801170216376_AssignValuesToMovieGenre1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801202329231_FeedMoreMovies.cs" />
+    <Compile Include="Migrations\201801202329231_FeedMoreMovies.Designer.cs">
+      <DependentUpon>201801202329231_FeedMoreMovies.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -348,6 +352,7 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModel\" />
@@ -435,6 +440,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801170216376_AssignValuesToMovieGenre1.resx">
       <DependentUpon>201801170216376_AssignValuesToMovieGenre1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801202329231_FeedMoreMovies.resx">
+      <DependentUpon>201801202329231_FeedMoreMovies.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
