Day 15- 2-4-18 Validation and client side validation

--- a/moviemall/moviemall.csproj
+++ b/moviemall/moviemall.csproj
@@ -282,6 +282,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AgeValidationForMembership.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
