--- a/moviemall/moviemall.csproj
+++ b/moviemall/moviemall.csproj
@@ -280,6 +280,10 @@
     <Compile Include="Migrations\201801202329231_FeedMoreMovies.Designer.cs">
       <DependentUpon>201801202329231_FeedMoreMovies.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802060221577_Exercise5_littleChange.cs" />
+    <Compile Include="Migrations\201802060221577_Exercise5_littleChange.Designer.cs">
+      <DependentUpon>201802060221577_Exercise5_littleChange.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AgeValidationForMembership.cs" />
@@ -446,6 +450,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801202329231_FeedMoreMovies.resx">
       <DependentUpon>201801202329231_FeedMoreMovies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802060221577_Exercise5_littleChange.resx">
+      <DependentUpon>201802060221577_Exercise5_littleChange.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
